--- a/machines/qemu-loongarch/.config
+++ b/machines/qemu-loongarch/.config
@@ -930,6 +930,10 @@ CONFIG_RT_PAGE_MAX_ORDER=11
 # CONFIG_PKG_USING_STM32_SDIO is not set
 # CONFIG_PKG_USING_STM32WL_HAL_DRIVER is not set
 # CONFIG_PKG_USING_STM32WL_CMSIS_DRIVER is not set
+# CONFIG_PKG_USING_STM32WB_HAL_DRIVER is not set
+# CONFIG_PKG_USING_STM32WB_CMSIS_DRIVER is not set
+# CONFIG_PKG_USING_STM32MP1_M4_HAL_DRIVER is not set
+# CONFIG_PKG_USING_STM32MP1_M4_CMSIS_DRIVER is not set
 # end of STM32 HAL & SDK Drivers
 
 #
@@ -998,6 +1002,23 @@ CONFIG_RT_PAGE_MAX_ORDER=11
 # CONFIG_PKG_USING_AT32M412_416_HAL_DRIVER is not set
 # CONFIG_PKG_USING_AT32M412_416_CMSIS_DRIVER is not set
 # end of AT32 HAL & SDK Drivers
+
+#
+# HC32 DDL Drivers
+#
+# end of HC32 DDL Drivers
+
+#
+# NXP HAL & SDK Drivers
+#
+# CONFIG_PKG_USING_NXP_MCX_CMSIS_DRIVER is not set
+# CONFIG_PKG_USING_NXP_MCX_SERIES_DRIVER is not set
+# CONFIG_PKG_USING_NXP_LPC_DRIVER is not set
+# CONFIG_PKG_USING_NXP_LPC55S_DRIVER is not set
+# CONFIG_PKG_USING_NXP_IMX6SX_DRIVER is not set
+# CONFIG_PKG_USING_NXP_IMX6UL_DRIVER is not set
+# CONFIG_PKG_USING_NXP_IMXRT_DRIVER is not set
+# end of NXP HAL & SDK Drivers
 # end of HAL & SDK Drivers
 
 #
@@ -1072,6 +1093,7 @@ CONFIG_RT_PAGE_MAX_ORDER=11
 # CONFIG_PKG_USING_PAJ7620 is not set
 # CONFIG_PKG_USING_STHS34PF80 is not set
 # CONFIG_PKG_USING_P3T1755 is not set
+# CONFIG_PKG_USING_QMI8658 is not set
 # end of sensors drivers
 
 #
@@ -1164,6 +1186,8 @@ CONFIG_RT_PAGE_MAX_ORDER=11
 # CONFIG_PKG_USING_GC9A01 is not set
 # CONFIG_PKG_USING_IK485 is not set
 # CONFIG_PKG_USING_SERVO is not set
+# CONFIG_PKG_USING_SEAN_WS2812B is not set
+# CONFIG_PKG_USING_IC74HC165 is not set
 # CONFIG_PKG_USING_SPI_TOOLS is not set
 # end of peripheral libraries and drivers
 
@@ -1508,9 +1532,9 @@ CONFIG_RT_PAGE_MAX_ORDER=11
 CONFIG_BSP_USING_VIRTIO=y
 CONFIG_BSP_USING_VIRTIO_BLK=y
 CONFIG_BSP_USING_VIRTIO_NET=y
-# CONFIG_BSP_USING_VIRTIO_CONSOLE is not set
-# CONFIG_BSP_USING_VIRTIO_GPU is not set
-# CONFIG_BSP_USING_VIRTIO_INPUT is not set
+CONFIG_BSP_USING_VIRTIO_CONSOLE=y
+CONFIG_BSP_USING_VIRTIO_GPU=y
+CONFIG_BSP_USING_VIRTIO_INPUT=y
 # end of LoongArch QEMU virt64 configs
 
 CONFIG_BOARD_QEMU_VIRT_LOONGARCH64=y
