--- a/machines/qemu-virt-riscv64/.config
+++ b/machines/qemu-virt-riscv64/.config
@@ -900,10 +900,10 @@ CONFIG_LWP_PTY_MAX_PARIS_LIMIT=64
 CONFIG_PKG_USING_LWEXT4=y
 CONFIG_PKG_LWEXT4_PATH="/packages/system/lwext4"
 CONFIG_RT_USING_DFS_LWEXT4=y
-CONFIG_PKG_USING_LWEXT4_V200=y
-# CONFIG_PKG_USING_LWEXT4_LATEST_VERSION is not set
+# CONFIG_PKG_USING_LWEXT4_V200 is not set
+CONFIG_PKG_USING_LWEXT4_LATEST_VERSION=y
 # CONFIG_PKG_USING_LWEXT4_V110 is not set
-CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
+CONFIG_PKG_LWEXT4_VER="latest"
 # CONFIG_PKG_USING_THREAD_POOL is not set
 # CONFIG_PKG_USING_ROBOTS is not set
 # CONFIG_PKG_USING_EV is not set
@@ -983,6 +983,10 @@ CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 # CONFIG_PKG_USING_STM32_SDIO is not set
 # CONFIG_PKG_USING_STM32WL_HAL_DRIVER is not set
 # CONFIG_PKG_USING_STM32WL_CMSIS_DRIVER is not set
+# CONFIG_PKG_USING_STM32WB_HAL_DRIVER is not set
+# CONFIG_PKG_USING_STM32WB_CMSIS_DRIVER is not set
+# CONFIG_PKG_USING_STM32MP1_M4_HAL_DRIVER is not set
+# CONFIG_PKG_USING_STM32MP1_M4_CMSIS_DRIVER is not set
 # end of STM32 HAL & SDK Drivers
 
 #
@@ -1052,6 +1056,23 @@ CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 # CONFIG_PKG_USING_AT32M412_416_HAL_DRIVER is not set
 # CONFIG_PKG_USING_AT32M412_416_CMSIS_DRIVER is not set
 # end of AT32 HAL & SDK Drivers
+
+#
+# HC32 DDL Drivers
+#
+# end of HC32 DDL Drivers
+
+#
+# NXP HAL & SDK Drivers
+#
+# CONFIG_PKG_USING_NXP_MCX_CMSIS_DRIVER is not set
+# CONFIG_PKG_USING_NXP_MCX_SERIES_DRIVER is not set
+# CONFIG_PKG_USING_NXP_LPC_DRIVER is not set
+# CONFIG_PKG_USING_NXP_LPC55S_DRIVER is not set
+# CONFIG_PKG_USING_NXP_IMX6SX_DRIVER is not set
+# CONFIG_PKG_USING_NXP_IMX6UL_DRIVER is not set
+# CONFIG_PKG_USING_NXP_IMXRT_DRIVER is not set
+# end of NXP HAL & SDK Drivers
 # end of HAL & SDK Drivers
 
 #
@@ -1126,6 +1147,7 @@ CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 # CONFIG_PKG_USING_PAJ7620 is not set
 # CONFIG_PKG_USING_STHS34PF80 is not set
 # CONFIG_PKG_USING_P3T1755 is not set
+# CONFIG_PKG_USING_QMI8658 is not set
 # end of sensors drivers
 
 #
@@ -1218,6 +1240,8 @@ CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 # CONFIG_PKG_USING_GC9A01 is not set
 # CONFIG_PKG_USING_IK485 is not set
 # CONFIG_PKG_USING_SERVO is not set
+# CONFIG_PKG_USING_SEAN_WS2812B is not set
+# CONFIG_PKG_USING_IC74HC165 is not set
 # CONFIG_PKG_USING_SPI_TOOLS is not set
 # end of peripheral libraries and drivers
 
