--- a/rt-thread/bsp/qemu-virt64-loongarch/.config
+++ b/rt-thread/bsp/qemu-virt64-loongarch/.config
@@ -118,10 +118,9 @@ CONFIG_RT_KLIBC_USING_VSNPRINTF_LOG10_TAYLOR_TERMS=4
 # CONFIG_RT_UTEST_TC_USING_KLIBC is not set
 # end of klibc options
 
-CONFIG_RT_NAME_MAX=24
+CONFIG_RT_NAME_MAX=8
 # CONFIG_RT_USING_ARCH_DATA_TYPE is not set
 # CONFIG_RT_USING_NANO is not set
-CONFIG_RT_USING_SMART=y
 # CONFIG_RT_USING_AMP is not set
 # CONFIG_RT_USING_SMP is not set
 CONFIG_RT_CPUS_NR=1
@@ -130,19 +129,19 @@ CONFIG_RT_ALIGN_SIZE=8
 CONFIG_RT_THREAD_PRIORITY_32=y
 # CONFIG_RT_THREAD_PRIORITY_256 is not set
 CONFIG_RT_THREAD_PRIORITY_MAX=32
-CONFIG_RT_TICK_PER_SECOND=100
+CONFIG_RT_TICK_PER_SECOND=1000
 CONFIG_RT_USING_OVERFLOW_CHECK=y
 CONFIG_RT_USING_HOOK=y
 CONFIG_RT_HOOK_USING_FUNC_PTR=y
 # CONFIG_RT_USING_HOOKLIST is not set
 CONFIG_RT_USING_IDLE_HOOK=y
 CONFIG_RT_IDLE_HOOK_LIST_SIZE=4
-CONFIG_IDLE_THREAD_STACK_SIZE=16384
+CONFIG_IDLE_THREAD_STACK_SIZE=4096
 CONFIG_RT_USING_TIMER_SOFT=y
 CONFIG_RT_TIMER_THREAD_PRIO=4
-CONFIG_RT_TIMER_THREAD_STACK_SIZE=16384
+CONFIG_RT_TIMER_THREAD_STACK_SIZE=4096
 # CONFIG_RT_USING_TIMER_ALL_SOFT is not set
-CONFIG_RT_USING_CPU_USAGE_TRACER=y
+# CONFIG_RT_USING_CPU_USAGE_TRACER is not set
 
 #
 # kservice options
@@ -166,47 +165,42 @@ CONFIG_RT_USING_EVENT=y
 CONFIG_RT_USING_MAILBOX=y
 CONFIG_RT_USING_MESSAGEQUEUE=y
 # CONFIG_RT_USING_MESSAGEQUEUE_PRIORITY is not set
-CONFIG_RT_USING_SIGNALS=y
+# CONFIG_RT_USING_SIGNALS is not set
 # end of Inter-Thread communication
 
 #
 # Memory Management
 #
 CONFIG_RT_USING_MEMPOOL=y
-# CONFIG_RT_USING_SMALL_MEM is not set
-CONFIG_RT_USING_SLAB=y
-# CONFIG_RT_USING_MEMHEAP is not set
-# CONFIG_RT_USING_SMALL_MEM_AS_HEAP is not set
+CONFIG_RT_USING_SMALL_MEM=y
+# CONFIG_RT_USING_SLAB is not set
+CONFIG_RT_USING_MEMHEAP=y
+CONFIG_RT_MEMHEAP_FAST_MODE=y
+# CONFIG_RT_MEMHEAP_BEST_MODE is not set
+CONFIG_RT_USING_SMALL_MEM_AS_HEAP=y
 # CONFIG_RT_USING_MEMHEAP_AS_HEAP is not set
-CONFIG_RT_USING_SLAB_AS_HEAP=y
+# CONFIG_RT_USING_SLAB_AS_HEAP is not set
 # CONFIG_RT_USING_USERHEAP is not set
 # CONFIG_RT_USING_NOHEAP is not set
-CONFIG_RT_USING_MEMTRACE=y
+# CONFIG_RT_USING_MEMTRACE is not set
 # CONFIG_RT_USING_HEAP_ISR is not set
 CONFIG_RT_USING_HEAP=y
 # end of Memory Management
 
 CONFIG_RT_USING_DEVICE=y
-CONFIG_RT_USING_DEVICE_OPS=y
+# CONFIG_RT_USING_DEVICE_OPS is not set
 # CONFIG_RT_USING_INTERRUPT_INFO is not set
 # CONFIG_RT_USING_THREADSAFE_PRINTF is not set
 CONFIG_RT_USING_CONSOLE=y
-CONFIG_RT_CONSOLEBUF_SIZE=256
+CONFIG_RT_CONSOLEBUF_SIZE=128
 CONFIG_RT_CONSOLE_DEVICE_NAME="uart0"
 CONFIG_RT_VER_NUM=0x50200
-CONFIG_RT_USING_STDC_ATOMIC=y
+# CONFIG_RT_USING_STDC_ATOMIC is not set
 CONFIG_RT_BACKTRACE_LEVEL_MAX_NR=32
 # end of RT-Thread Kernel
 
-CONFIG_ARCH_CPU_64BIT=y
 CONFIG_RT_USING_CACHE=y
 CONFIG_ARCH_MM_MMU=y
-CONFIG_KERNEL_VADDR_START=0xffffffc000000000
-CONFIG_ARCH_RISCV=y
-CONFIG_ARCH_RISCV_FPU=y
-CONFIG_ARCH_RISCV64=y
-CONFIG_ARCH_USING_NEW_CTX_SWITCH=y
-CONFIG_ARCH_USING_RISCV_COMMON64=y
 CONFIG_ARCH_REMAP_KERNEL=y
 
 #
@@ -214,7 +208,7 @@ CONFIG_ARCH_REMAP_KERNEL=y
 #
 CONFIG_RT_USING_COMPONENTS_INIT=y
 CONFIG_RT_USING_USER_MAIN=y
-CONFIG_RT_MAIN_THREAD_STACK_SIZE=16384
+CONFIG_RT_MAIN_THREAD_STACK_SIZE=6144
 CONFIG_RT_MAIN_THREAD_PRIORITY=10
 # CONFIG_RT_USING_LEGACY is not set
 CONFIG_RT_USING_MSH=y
@@ -222,9 +216,9 @@ CONFIG_RT_USING_FINSH=y
 CONFIG_FINSH_USING_MSH=y
 CONFIG_FINSH_THREAD_NAME="tshell"
 CONFIG_FINSH_THREAD_PRIORITY=20
-CONFIG_FINSH_THREAD_STACK_SIZE=16384
+CONFIG_FINSH_THREAD_STACK_SIZE=4096
 CONFIG_FINSH_USING_HISTORY=y
-CONFIG_FINSH_HISTORY_LINES=10
+CONFIG_FINSH_HISTORY_LINES=5
 CONFIG_FINSH_USING_SYMTAB=y
 CONFIG_FINSH_CMD_SIZE=80
 CONFIG_MSH_USING_BUILT_IN_COMMANDS=y
@@ -240,8 +234,12 @@ CONFIG_FINSH_USING_OPTION_COMPLETION=y
 CONFIG_RT_USING_DFS=y
 CONFIG_DFS_USING_POSIX=y
 CONFIG_DFS_USING_WORKDIR=y
-CONFIG_DFS_FD_MAX=32
-CONFIG_RT_USING_DFS_V2=y
+CONFIG_RT_USING_DFS_MNTTABLE=y
+CONFIG_DFS_FD_MAX=16
+CONFIG_RT_USING_DFS_V1=y
+# CONFIG_RT_USING_DFS_V2 is not set
+CONFIG_DFS_FILESYSTEMS_MAX=4
+CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
 CONFIG_RT_USING_DFS_ELMFAT=y
 
 #
@@ -269,24 +267,12 @@ CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
 # end of elm-chan's FatFs, Generic FAT Filesystem Module
 
 CONFIG_RT_USING_DFS_DEVFS=y
-CONFIG_RT_USING_DFS_ROMFS=y
-CONFIG_RT_USING_DFS_PTYFS=y
-# CONFIG_RT_USING_DFS_PROCFS is not set
+# CONFIG_RT_USING_DFS_ISO9660 is not set
+# CONFIG_RT_USING_DFS_ROMFS is not set
 # CONFIG_RT_USING_DFS_CROMFS is not set
-# CONFIG_RT_USING_DFS_TMPFS is not set
+CONFIG_RT_USING_DFS_RAMFS=y
+CONFIG_RT_USING_DFS_TMPFS=y
 # CONFIG_RT_USING_DFS_MQUEUE is not set
-CONFIG_RT_USING_PAGECACHE=y
-
-#
-# page cache config
-#
-CONFIG_RT_PAGECACHE_COUNT=4096
-CONFIG_RT_PAGECACHE_ASPACE_COUNT=1024
-CONFIG_RT_PAGECACHE_PRELOAD=4
-CONFIG_RT_PAGECACHE_HASH_NR=1024
-CONFIG_RT_PAGECACHE_GC_WORK_LEVEL=90
-CONFIG_RT_PAGECACHE_GC_STOP_LEVEL=70
-# end of page cache config
 # end of DFS: device virtual file system
 
 # CONFIG_RT_USING_FAL is not set
@@ -298,25 +284,21 @@ CONFIG_RT_PAGECACHE_GC_STOP_LEVEL=70
 # CONFIG_RT_USING_DEV_BUS is not set
 CONFIG_RT_USING_DEVICE_IPC=y
 CONFIG_RT_UNAMED_PIPE_NUMBER=64
-CONFIG_RT_USING_SYSTEM_WORKQUEUE=y
-CONFIG_RT_SYSTEM_WORKQUEUE_STACKSIZE=8192
-CONFIG_RT_SYSTEM_WORKQUEUE_PRIORITY=23
+# CONFIG_RT_USING_SYSTEM_WORKQUEUE is not set
 CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
 CONFIG_RT_SERIAL_USING_DMA=y
 CONFIG_RT_SERIAL_RB_BUFSZ=64
-CONFIG_RT_USING_SERIAL_BYPASS=y
+# CONFIG_RT_USING_SERIAL_BYPASS is not set
 # CONFIG_RT_USING_CAN is not set
-CONFIG_RT_USING_CPUTIME=y
-CONFIG_RT_USING_CPUTIME_RISCV=y
-CONFIG_CPUTIME_TIMER_FREQ=10000000
+# CONFIG_RT_USING_CPUTIME is not set
 # CONFIG_RT_USING_I2C is not set
 # CONFIG_RT_USING_PHY is not set
 # CONFIG_RT_USING_PHY_V2 is not set
 # CONFIG_RT_USING_ADC is not set
 # CONFIG_RT_USING_DAC is not set
-CONFIG_RT_USING_NULL=y
+# CONFIG_RT_USING_NULL is not set
 CONFIG_RT_USING_ZERO=y
 CONFIG_RT_USING_RANDOM=y
 # CONFIG_RT_USING_PWM is not set
@@ -325,10 +307,15 @@ CONFIG_RT_USING_RANDOM=y
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
-CONFIG_RT_USING_RTC=y
-# CONFIG_RT_USING_ALARM is not set
-CONFIG_RT_USING_SOFT_RTC=y
-# CONFIG_RT_USING_SDIO is not set
+# CONFIG_RT_USING_RTC is not set
+CONFIG_RT_USING_SDIO=y
+CONFIG_RT_SDIO_STACK_SIZE=512
+CONFIG_RT_SDIO_THREAD_PRIORITY=15
+CONFIG_RT_MMCSD_STACK_SIZE=1024
+CONFIG_RT_MMCSD_THREAD_PRIORITY=22
+CONFIG_RT_MMCSD_MAX_PARTITION=16
+# CONFIG_RT_SDIO_DEBUG is not set
+# CONFIG_RT_USING_SDHCI is not set
 # CONFIG_RT_USING_SPI is not set
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
@@ -337,20 +324,22 @@ CONFIG_RT_USING_SOFT_RTC=y
 # CONFIG_RT_USING_LCD is not set
 # CONFIG_RT_USING_HWCRYPTO is not set
 # CONFIG_RT_USING_WIFI is not set
-# CONFIG_RT_USING_BLK is not set
-CONFIG_RT_USING_VIRTIO=y
-CONFIG_RT_USING_VIRTIO10=y
-# CONFIG_RT_USING_VIRTIO_MMIO_ALIGN is not set
-CONFIG_RT_USING_VIRTIO_BLK=y
-CONFIG_RT_USING_VIRTIO_NET=y
-CONFIG_RT_USING_VIRTIO_CONSOLE=y
-CONFIG_RT_USING_VIRTIO_CONSOLE_PORT_MAX_NR=4
-CONFIG_RT_USING_VIRTIO_GPU=y
-CONFIG_RT_USING_VIRTIO_INPUT=y
+CONFIG_RT_USING_BLK=y
+
+#
+# Partition Types
+#
+CONFIG_RT_BLK_PARTITION_DFS=y
+CONFIG_RT_BLK_PARTITION_EFI=y
+# end of Partition Types
+
+# CONFIG_RT_USING_VIRTIO is not set
 CONFIG_RT_USING_PIN=y
 CONFIG_RT_USING_KTIME=y
 # CONFIG_RT_USING_HWTIMER is not set
-# CONFIG_RT_USING_CHERRYUSB is not set
+CONFIG_RT_USING_CHERRYUSB=y
+# CONFIG_RT_CHERRYUSB_DEVICE is not set
+# CONFIG_RT_CHERRYUSB_HOST is not set
 # end of Device Drivers
 
 #
@@ -375,31 +364,17 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 #
 # POSIX (Portable Operating System Interface) layer
 #
-CONFIG_RT_USING_POSIX_FS=y
-CONFIG_RT_USING_POSIX_DEVIO=y
-CONFIG_RT_USING_POSIX_STDIO=y
-CONFIG_RT_USING_POSIX_POLL=y
-CONFIG_RT_USING_POSIX_SELECT=y
-# CONFIG_RT_USING_POSIX_EVENTFD is not set
-CONFIG_RT_USING_POSIX_EPOLL=y
-CONFIG_RT_USING_POSIX_SIGNALFD=y
-CONFIG_RT_SIGNALFD_MAX_NUM=10
-# CONFIG_RT_USING_POSIX_TIMERFD is not set
-# CONFIG_RT_USING_POSIX_SOCKET is not set
-CONFIG_RT_USING_POSIX_TERMIOS=y
-CONFIG_RT_USING_POSIX_AIO=y
-# CONFIG_RT_USING_POSIX_MMAN is not set
-CONFIG_RT_USING_POSIX_DELAY=y
-CONFIG_RT_USING_POSIX_CLOCK=y
-CONFIG_RT_USING_POSIX_TIMER=y
+# CONFIG_RT_USING_POSIX_FS is not set
+# CONFIG_RT_USING_POSIX_DELAY is not set
+# CONFIG_RT_USING_POSIX_CLOCK is not set
+# CONFIG_RT_USING_POSIX_TIMER is not set
 # CONFIG_RT_USING_PTHREADS is not set
 # CONFIG_RT_USING_MODULE is not set
 
 #
 # Interprocess Communication (IPC)
 #
-CONFIG_RT_USING_POSIX_PIPE=y
-CONFIG_RT_USING_POSIX_PIPE_SIZE=512
+# CONFIG_RT_USING_POSIX_PIPE is not set
 # CONFIG_RT_USING_POSIX_MESSAGE_QUEUE is not set
 # CONFIG_RT_USING_POSIX_MESSAGE_SEMAPHORE is not set
 
@@ -409,95 +384,18 @@ CONFIG_RT_USING_POSIX_PIPE_SIZE=512
 # end of Interprocess Communication (IPC)
 # end of POSIX (Portable Operating System Interface) layer
 
-# CONFIG_RT_USING_CPLUSPLUS is not set
+CONFIG_RT_USING_CPLUSPLUS=y
+# CONFIG_RT_USING_CPLUSPLUS11 is not set
+# CONFIG_RT_USING_CPP_WRAPPER is not set
+# CONFIG_RT_USING_CPP_EXCEPTIONS is not set
 # end of C/C++ and POSIX layer
 
 #
 # Network
 #
-CONFIG_RT_USING_SAL=y
-CONFIG_SAL_INTERNET_CHECK=y
-
-#
-# Docking with protocol stacks
-#
-CONFIG_SAL_USING_LWIP=y
-# CONFIG_SAL_USING_AT is not set
-# CONFIG_SAL_USING_TLS is not set
-# end of Docking with protocol stacks
-
-CONFIG_SAL_USING_POSIX=y
-CONFIG_RT_USING_NETDEV=y
-CONFIG_NETDEV_USING_IFCONFIG=y
-CONFIG_NETDEV_USING_PING=y
-CONFIG_NETDEV_USING_NETSTAT=y
-CONFIG_NETDEV_USING_AUTO_DEFAULT=y
-# CONFIG_NETDEV_USING_LINK_STATUS_CALLBACK is not set
-# CONFIG_NETDEV_USING_IPV6 is not set
-CONFIG_NETDEV_IPV4=1
-CONFIG_NETDEV_IPV6=0
-CONFIG_RT_USING_LWIP=y
-# CONFIG_RT_USING_LWIP_LOCAL_VERSION is not set
-# CONFIG_RT_USING_LWIP141 is not set
-CONFIG_RT_USING_LWIP203=y
-# CONFIG_RT_USING_LWIP212 is not set
-# CONFIG_RT_USING_LWIP_LATEST is not set
-CONFIG_RT_USING_LWIP_VER_NUM=0x20003
-# CONFIG_RT_USING_LWIP_IPV6 is not set
-CONFIG_RT_LWIP_MEM_ALIGNMENT=4
-CONFIG_RT_LWIP_IGMP=y
-CONFIG_RT_LWIP_ICMP=y
-# CONFIG_RT_LWIP_SNMP is not set
-CONFIG_RT_LWIP_DNS=y
-CONFIG_RT_LWIP_DHCP=y
-CONFIG_IP_SOF_BROADCAST=1
-CONFIG_IP_SOF_BROADCAST_RECV=1
-
-#
-# Static IPv4 Address
-#
-CONFIG_RT_LWIP_IPADDR="192.168.1.30"
-CONFIG_RT_LWIP_GWADDR="192.168.1.1"
-CONFIG_RT_LWIP_MSKADDR="255.255.255.0"
-# end of Static IPv4 Address
-
-CONFIG_RT_LWIP_UDP=y
-CONFIG_RT_LWIP_TCP=y
-CONFIG_RT_LWIP_RAW=y
-# CONFIG_RT_LWIP_PPP is not set
-CONFIG_RT_MEMP_NUM_NETCONN=8
-CONFIG_RT_LWIP_PBUF_NUM=16
-CONFIG_RT_LWIP_RAW_PCB_NUM=4
-CONFIG_RT_LWIP_UDP_PCB_NUM=4
-CONFIG_RT_LWIP_TCP_PCB_NUM=4
-CONFIG_RT_LWIP_TCP_SEG_NUM=40
-CONFIG_RT_LWIP_TCP_SND_BUF=8196
-CONFIG_RT_LWIP_TCP_WND=8196
-CONFIG_RT_LWIP_TCPTHREAD_PRIORITY=10
-CONFIG_RT_LWIP_TCPTHREAD_MBOX_SIZE=8
-CONFIG_RT_LWIP_TCPTHREAD_STACKSIZE=8192
-# CONFIG_LWIP_NO_RX_THREAD is not set
-# CONFIG_LWIP_NO_TX_THREAD is not set
-CONFIG_RT_LWIP_ETHTHREAD_PRIORITY=12
-CONFIG_RT_LWIP_ETHTHREAD_STACKSIZE=8192
-CONFIG_RT_LWIP_ETHTHREAD_MBOX_SIZE=8
-# CONFIG_RT_LWIP_REASSEMBLY_FRAG is not set
-CONFIG_LWIP_NETIF_STATUS_CALLBACK=1
-CONFIG_LWIP_NETIF_LINK_CALLBACK=1
-CONFIG_RT_LWIP_NETIF_NAMESIZE=6
-CONFIG_SO_REUSE=1
-CONFIG_LWIP_SO_RCVTIMEO=1
-CONFIG_LWIP_SO_SNDTIMEO=1
-CONFIG_LWIP_SO_RCVBUF=1
-CONFIG_LWIP_SO_LINGER=0
-# CONFIG_RT_LWIP_NETIF_LOOPBACK is not set
-CONFIG_LWIP_NETIF_LOOPBACK=0
-# CONFIG_RT_LWIP_STATS is not set
-# CONFIG_RT_LWIP_USING_HW_CHECKSUM is not set
-CONFIG_RT_LWIP_USING_PING=y
-# CONFIG_LWIP_USING_DHCPD is not set
-# CONFIG_RT_LWIP_ENABLE_USER_HOOKS is not set
-# CONFIG_RT_LWIP_DEBUG is not set
+# CONFIG_RT_USING_SAL is not set
+# CONFIG_RT_USING_NETDEV is not set
+# CONFIG_RT_USING_LWIP is not set
 # CONFIG_RT_USING_AT is not set
 # end of Network
 
@@ -513,13 +411,9 @@ CONFIG_RT_LWIP_USING_PING=y
 #
 # CONFIG_RT_USING_RYM is not set
 # CONFIG_RT_USING_ULOG is not set
-CONFIG_RT_USING_UTEST=y
-CONFIG_UTEST_THR_STACK_SIZE=4096
-CONFIG_UTEST_THR_PRIORITY=20
-# CONFIG_RT_UTEST_USING_AUTO_RUN is not set
-# CONFIG_RT_UTEST_USING_ALL_CASES is not set
+# CONFIG_RT_USING_UTEST is not set
 # CONFIG_RT_USING_VAR_EXPORT is not set
-CONFIG_RT_USING_RESOURCE_ID=y
+# CONFIG_RT_USING_RESOURCE_ID is not set
 CONFIG_RT_USING_ADT=y
 CONFIG_RT_USING_ADT_AVL=y
 CONFIG_RT_USING_ADT_BITMAP=y
@@ -535,7 +429,8 @@ CONFIG_RT_USING_ADT_REF=y
 #
 CONFIG_RT_PAGE_AFFINITY_BLOCK_SIZE=0x1000
 CONFIG_RT_PAGE_MAX_ORDER=11
-# CONFIG_RT_USING_MEMBLOCK is not set
+CONFIG_RT_USING_MEMBLOCK=y
+CONFIG_RT_INIT_MEMORY_REGIONS=128
 
 #
 # Debugging
@@ -545,20 +440,6 @@ CONFIG_RT_PAGE_MAX_ORDER=11
 # CONFIG_RT_DEBUGGING_PAGE_POISON is not set
 # end of Debugging
 # end of Memory management
-
-CONFIG_RT_USING_LWP=y
-# CONFIG_LWP_DEBUG is not set
-CONFIG_LWP_USING_RUNTIME=y
-CONFIG_RT_LWP_MAX_NR=30
-CONFIG_LWP_TASK_STACK_SIZE=16384
-CONFIG_RT_CH_MSG_MAX_NR=1024
-CONFIG_LWP_TID_MAX_NR=64
-CONFIG_RT_LWP_SHM_MAX_NR=64
-CONFIG_RT_USING_LDSO=y
-# CONFIG_ELF_DEBUG_ENABLE is not set
-# CONFIG_ELF_LOAD_RANDOMIZE is not set
-CONFIG_LWP_USING_TERMINAL=y
-CONFIG_LWP_PTY_MAX_PARIS_LIMIT=64
 
 #
 # Using USB legacy version
@@ -881,7 +762,13 @@ CONFIG_LWP_PTY_MAX_PARIS_LIMIT=64
 # CONFIG_PKG_USING_UC_MODBUS is not set
 # end of Micrium: Micrium software products porting for RT-Thread
 
-# CONFIG_PKG_USING_FREERTOS_WRAPPER is not set
+CONFIG_PKG_USING_FREERTOS_WRAPPER=y
+CONFIG_PKG_FREERTOS_WRAPPER_PATH="/packages/system/FreeRTOS_Wrapper"
+# CONFIG_PKG_FREERTOS_USING_CONFIG_H is not set
+# CONFIG_PKG_FREERTOS_USING_MEMMANG is not set
+# CONFIG_PKG_USING_FREERTOS_WRAPPER_V100 is not set
+CONFIG_PKG_USING_FREERTOS_WRAPPER_LATEST_VERSION=y
+CONFIG_PKG_FREERTOS_WRAPPER_VER="latest"
 # CONFIG_PKG_USING_LITEOS_SDK is not set
 # CONFIG_PKG_USING_TZ_DATABASE is not set
 # CONFIG_PKG_USING_CAIRO is not set
@@ -897,20 +784,18 @@ CONFIG_LWP_PTY_MAX_PARIS_LIMIT=64
 # CONFIG_PKG_USING_LITTLEFS is not set
 # CONFIG_PKG_USING_DFS_JFFS2 is not set
 # CONFIG_PKG_USING_DFS_UFFS is not set
-CONFIG_PKG_USING_LWEXT4=y
-CONFIG_PKG_LWEXT4_PATH="/packages/system/lwext4"
-CONFIG_RT_USING_DFS_LWEXT4=y
-CONFIG_PKG_USING_LWEXT4_V200=y
-# CONFIG_PKG_USING_LWEXT4_LATEST_VERSION is not set
-# CONFIG_PKG_USING_LWEXT4_V110 is not set
-CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
+# CONFIG_PKG_USING_LWEXT4 is not set
 # CONFIG_PKG_USING_THREAD_POOL is not set
 # CONFIG_PKG_USING_ROBOTS is not set
 # CONFIG_PKG_USING_EV is not set
 # CONFIG_PKG_USING_SYSWATCH is not set
 # CONFIG_PKG_USING_SYS_LOAD_MONITOR is not set
 # CONFIG_PKG_USING_PLCCORE is not set
-# CONFIG_PKG_USING_RAMDISK is not set
+CONFIG_PKG_USING_RAMDISK=y
+CONFIG_PKG_RAMDISK_PATH="/packages/system/ramdisk"
+# CONFIG_PKG_USING_RAMDISK_V010 is not set
+CONFIG_PKG_USING_RAMDISK_LATEST_VERSION=y
+CONFIG_PKG_RAMDISK_VER="latest"
 # CONFIG_PKG_USING_MININI is not set
 # CONFIG_PKG_USING_QBOOT is not set
 # CONFIG_PKG_USING_PPOOL is not set
@@ -1013,7 +898,6 @@ CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 
 # CONFIG_PKG_USING_NRF5X_SDK is not set
 # CONFIG_PKG_USING_NRFX is not set
-# CONFIG_PKG_USING_NUCLEI_SDK is not set
 # CONFIG_PKG_USING_RASPBERRYPI_PICO_SDK is not set
 # CONFIG_PKG_USING_MM32 is not set
 
@@ -1557,18 +1441,11 @@ CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 # end of RT-Thread online packages
 
 #
-# RISC-V QEMU virt64 configs
+# LoongArch QEMU virt64 configs
 #
-CONFIG_BSP_USING_VIRTIO=y
-CONFIG_BSP_USING_VIRTIO_BLK=y
-CONFIG_BSP_USING_VIRTIO_NET=y
-CONFIG_BSP_USING_VIRTIO_CONSOLE=y
-CONFIG_BSP_USING_VIRTIO_GPU=y
-CONFIG_BSP_USING_VIRTIO_INPUT=y
-# end of RISC-V QEMU virt64 configs
+# end of LoongArch QEMU virt64 configs
 
-CONFIG_BOARD_QEMU_VIRT_RV64=y
+CONFIG_BOARD_QEMU_VIRT_LOONGARCH64=y
 CONFIG_ENABLE_FPU=y
-# CONFIG_ENABLE_VECTOR is not set
-# CONFIG_RT_USING_USERSPACE_32BIT_LIMIT is not set
-CONFIG___STACKSIZE__=16384
+# CONFIG_ENABLE_FPU_SIMD is not set
+CONFIG___STACKSIZE__=4096
