feat: set DFS_MAX_FD to 128

--- a/machines/qemu-virt-riscv64/.config
+++ b/machines/qemu-virt-riscv64/.config
@@ -240,7 +240,7 @@ CONFIG_FINSH_USING_OPTION_COMPLETION=y
 CONFIG_RT_USING_DFS=y
 CONFIG_DFS_USING_POSIX=y
 CONFIG_DFS_USING_WORKDIR=y
-CONFIG_DFS_FD_MAX=32
+CONFIG_DFS_FD_MAX=128
 CONFIG_RT_USING_DFS_V2=y
 CONFIG_RT_USING_DFS_ELMFAT=y
 
@@ -900,10 +900,10 @@ CONFIG_LWP_PTY_MAX_PARIS_LIMIT=64
 CONFIG_PKG_USING_LWEXT4=y
 CONFIG_PKG_LWEXT4_PATH="/packages/system/lwext4"
 CONFIG_RT_USING_DFS_LWEXT4=y
-# CONFIG_PKG_USING_LWEXT4_V200 is not set
-CONFIG_PKG_USING_LWEXT4_LATEST_VERSION=y
+CONFIG_PKG_USING_LWEXT4_V200=y
+# CONFIG_PKG_USING_LWEXT4_LATEST_VERSION is not set
 # CONFIG_PKG_USING_LWEXT4_V110 is not set
-CONFIG_PKG_LWEXT4_VER="latest"
+CONFIG_PKG_LWEXT4_VER="v2.0.0-dfsv2"
 # CONFIG_PKG_USING_THREAD_POOL is not set
 # CONFIG_PKG_USING_ROBOTS is not set
 # CONFIG_PKG_USING_EV is not set
@@ -1148,6 +1148,7 @@ CONFIG_PKG_LWEXT4_VER="latest"
 # CONFIG_PKG_USING_STHS34PF80 is not set
 # CONFIG_PKG_USING_P3T1755 is not set
 # CONFIG_PKG_USING_QMI8658 is not set
+# CONFIG_PKG_USING_ICM20948 is not set
 # end of sensors drivers
 
 #
@@ -1242,6 +1243,7 @@ CONFIG_PKG_LWEXT4_VER="latest"
 # CONFIG_PKG_USING_SERVO is not set
 # CONFIG_PKG_USING_SEAN_WS2812B is not set
 # CONFIG_PKG_USING_IC74HC165 is not set
+# CONFIG_PKG_USING_IST8310 is not set
 # CONFIG_PKG_USING_SPI_TOOLS is not set
 # end of peripheral libraries and drivers
 
