feat: add bsp libcpu

--- a/rt-thread/bsp/starfive/jh7110/SConstruct
+++ b/rt-thread/bsp/starfive/jh7110/SConstruct
@@ -21,7 +21,7 @@ env['ASCOM'] = env['ASPPCOM']
 
 Export('RTT_ROOT')
 Export('rtconfig')
-rtconfig.CPU='riscv64'
+rtconfig.CPU='jh7110'
 rtconfig.ARCH='risc-v'
 
 # prepare building environment
