--- a/rt-thread/bsp/testvirt/SConstruct
+++ b/rt-thread/bsp/testvirt/SConstruct
@@ -21,7 +21,7 @@ env['ASCOM'] = env['ASPPCOM']
 
 Export('RTT_ROOT')
 Export('rtconfig')
-rtconfig.CPU='jh7110'
+rtconfig.CPU='testfull'
 rtconfig.ARCH='risc-v'
 
 # prepare building environment
@@ -31,7 +31,6 @@ stack_size = 4096
 
 if GetDepend('RT_USING_SMART'):
     # use smart link.lds
-    print("use smart link.lds")
     env['LINKFLAGS'] = env['LINKFLAGS'].replace('link.lds', 'link_smart.lds')
 
 stack_lds = open('link_stacksize.lds', 'w')
